--- a/APPVIEW/Views/QLBills/ShowBillXacNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillXacNhan.cshtml
@@ -12,13 +12,12 @@
     List<Size> size = ViewBag.sizee;
     List<Color> color = ViewBag.Collor;
     List<Account> acc = ViewBag.acc;
+    int stt = 0;
 }
 
-<h1>ShowBill</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
+
 <form asp-controller="QLBills" asp-action="ShowBillXacNhan" class="row contact_form" method="post">
 
     <div class="row">
@@ -26,12 +25,12 @@
             <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
     
         </div>    <div class="col-md-2 form-group">
-            <button type="submit" class="btn btn-success">Shearch</button>
+            <button type="submit" class="btn btn-success">Tìm kiếm</button>
 
         </div>
     </div>
 </form>
-<table class="table">
+@* <table class="table">
     <thead>
         <tr>
             <th>
@@ -43,27 +42,14 @@
             <th>
                 Tên khách hàng
             </th>
-            <th>
-                Voucher
-            </th>
+        
             <th>
                 SDT
             </th>
             <th>
                 Địa chỉ
             </th>
-            <th>
-                Sản phẩm
-            </th>
-            <th>
-                Size
-            </th>
-            <th>
-                Màu
-            </th>
-            <th>
-                Số lượng
-            </th>
+            
             <th>
                 Ngày tạo
             </th>
@@ -85,74 +71,178 @@
                 <td>
                     @itembill.Code
                 </td>
-                <td>
-                    <span>
-                        @if (itembill.Status == 1)
-                        {
 
-                            <span>Chờ xác nhận</span>
-                        }
-                        else if (itembill.Status == 2)
-                        {
-                            <span>Đã xác nhận đơn hàng </span>
-                        }
-                        else if (itembill.Status == 3)
-                        {
-                            <span> Đang giao  </span>
-                        }
-                        else if (itembill.Status == 4)
-                        {
-                            <span>Đã giao </span>
-                        }
-                        else if (itembill.Status == 5)
-                        {
-                            <span>Thanh toán thành công </span>
-                        }
-                        else if (itembill.Status == 6)
-                        {
-                            <span>Thanh toán không thành công </span>
-                        }
+                @if (itembill.Status == 1)
+                {
+                    <td>  Chờ xác nhận</td>
+
+                }
+                else if (itembill.Status == 2)
+                {
+                    <td>  Đã xác nhận đơn hàng</td>
+
+                }
+                else if (itembill.Status == 3)
+                {
+                    <td>Đang giao</td>
+                }
+                else if (itembill.Status == 4)
+                {
+                    <td>Đã giao</td>
+                }
 
 
 
 
 
-                    </span>
-                </td>
-                <td>
-                    @account.Name
-                </td>
-                <td>
-                    @itembill.Voucherid
-                </td>
+
+
+
+        
+                    @if (account.Name == "khach k dang nhap")
+
+                    {
+                    <td>@itembill.Name</td>
+                    }
+                    else
+                    {
+                    <td>@account.Name</td>
+
+                    }
+          
+             
                 <td>
                     @itembill.PhoneNumber
                 </td>
                 <td>
                     @itembill.Address
                 </td>
-                <td>
-                    @pro.Name
-                </td>
-                <td>
-                    @siz.Name
-                </td>
-                <td>
-                    @colo.Name
-                </td>
-                <td>
-                    @userbillct.Amount
-                </td>
+              
                 <td>
                     @itembill.CreateDate
                 </td>
 
                 <td>
-                    <button class="btn btn-danger"> @Html.ActionLink("Giao hàng ", "GiaoHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
+                    <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Giao hàng ", "GiaoHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
+
+                </td>            <td>
+                    <button  style="width:140px"  class="btn btn-danger"> @Html.ActionLink("Giao hàng ", "GiaoHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
 
                 </td>
             </tr>
         }
     </tbody>
 </table>
+ *@
 
+
+
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">Suppliers</h5>
+    </div>
+    <div class="card-body">
+        <a class="btn btn-success waves-effect waves-light" asp-action="Create">
+            <span class="mdi mdi-plus-thick">Create new</span>
+        </a>
+
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Mã hóa đơn</th>
+                        <th>Tên khách hàng</th>
+
+                        <th>SDT</th>
+                        <th>Địa chỉ</th>
+
+                        <th>Trạng thái</th>
+                        <th>Ngày tạo</th>
+
+                        <th>Hành động</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (bill != null || bill.Count() > 0)
+                    {
+                        @foreach (var itembill in bill)
+                        {
+                            var account = acc.FirstOrDefault(c => c.Id == itembill.AccountId);
+                            var userbillct = billct.FirstOrDefault(c => c.BIllId == itembill.id);
+                            var pct = prdct.FirstOrDefault(c => c.Id == userbillct.ProductDetailID);
+                            var pro = prd.FirstOrDefault(c => c.Id == pct.Id_Product);
+                            var siz = size.FirstOrDefault(c => c.Id == pct.Id_Size);
+                            var colo = color.FirstOrDefault(c => c.Id == pct.Id_Color);
+                            <tr>
+                                <td>@(stt += 1)</td>
+                                <td>@itembill.Code</td>
+
+                                @if (account.Name == "khach k dang nhap")
+
+                                {
+                                    <td>@itembill.Name</td>
+                                }
+                                else
+                                {
+                                    <td>@account.Name</td>
+
+                                }
+
+                                <td>
+                                    @itembill.PhoneNumber
+                                </td>
+                                <td>
+                                    @itembill.Address
+                                </td>
+                                @if (itembill.Status == 1)
+                                {
+                                    <td>  Chờ xác nhận</td>
+
+                                }
+                                else if (itembill.Status == 2)
+                                {
+                                    <td>  Đã xác nhận đơn hàng</td>
+
+                                }
+                                else if (itembill.Status == 3)
+                                {
+                                    <td>Đang giao</td>
+                                }
+                                else if (itembill.Status == 4)
+                                {
+                                    <td>Đã giao</td>
+                                }
+
+                           
+                                <td>
+                                    @{
+                                        DateTime createDate = itembill.CreateDate;
+                                        string formattedDate = createDate != DateTime.MinValue
+                                        ? createDate.ToString("dd/MM/yyyy")
+                                        : "Not changed";
+                                    }
+                                    @formattedDate
+                                </td>
+
+                                <td>
+                                    <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Giao hàng ", "GiaoHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
+                                </td>   
+                                <td>
+                                    <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Hủy Đơn ", "HuyDon2", new { id = itembill.id }, new { style = "color:white;" }) </button>
+                                </td>
+
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="12" class="text-center">No Data.</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
