--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -26,13 +26,13 @@
     </div>
 </section>
 <!-- ================ end banner area ================= -->
-@if (TempData["mess"] != null)
+@* @if (TempData["mess"] != null)
 {
     <div class="alert alert-warning">
         @TempData["mess"]
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
     </div>
-}
+} *@
 <!--================Cart Area =================-->
 <section class="cart_area">
     <div class="container">
@@ -42,8 +42,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Images</th>
-                            <th scope="col">Name</th> 
-                           
+                            <th scope="col">Name</th>                            
                             <th scope="col">Price</th>
                             <th scope="col">Quantity</th>
                             <th scope="col">Size</th>
@@ -144,8 +143,7 @@
                                                             {
                                                             <option value="@Color.Id">@Color.Name</option>
                                                             }
-
-                                                 
+                                                
                                                         }                                                        
                                                     }                                                                                         
                                             </select>
@@ -157,6 +155,7 @@
 
                                         <td>
                                             <a class="btn btn-light" href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})"><i class="fa fa-trash"></i></a>
+                                            <a class="btn btn-light" href="@Url.ActionLink("checkout","home",new{id=Model[i].Id})"><i class="fa fa-bill"></i>Thanh toán</a>
                                         </td>
 
                                     </tr>
@@ -182,7 +181,7 @@
                                 <h5>Subtotal</h5>
                             </td>
                             <td>
-                                <h5>$@ViewBag.tt.ToString("C0", new CultureInfo("vi-VN"))</h5>
+                                <h5>@ViewBag.tt.ToString("C0", new CultureInfo("vi-VN"))</h5>
                             </td>
                         </tr>
                      
