--- a/APPVIEW/Views/Home/Shop.cshtml
+++ b/APPVIEW/Views/Home/Shop.cshtml
@@ -1,5 +1,6 @@
 ﻿@using APPDATA.Models
 @using Newtonsoft.Json
+@using System.Globalization;
 @{
     ViewData["Title"] = "Shop";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
@@ -143,26 +144,41 @@
                 <!-- Start Best Seller -->
                 <section class="lattest-product-area pb-40 category-list">
                     <div class="row" id="filtered-products">
+                        @{
+                            var p = new List<Guid>();
+                        }
                         @if (ViewBag.Products != null && ViewBag.Products.Count > 0)
                         {
                             foreach (var product in ViewBag.Products)
                             {
+                                if (p.Any(c => c == product.ProductDetail.Id_Product))
+                                {
+                                    continue;
+                                }
+                                p.Add(product.ProductDetail.Id_Product);
                                 <div class="col-md-6 col-lg-4">
                                     <div class="card text-center card-product">
                                         <div class="card-product__img">
-                                            @if (!string.IsNullOrEmpty(product.Image.Name))
+                                            @if (!string.IsNullOrEmpty(product.ProductDetail.Name))
                                             {
                                                 <img class="card-img" src="~/images/@product.Image.Name" alt="ErrorImg" width="150px" height="250px">
+
                                             }
                                             <ul class="card-product__imgOverlay">
                                                 <li><a href="@Url.ActionLink("details","home",new{id=product.ProductDetail.Id})"><button><i class="ti-search"></i></button></a></li>
-                                                <li><a href="@Url.ActionLink("Addtocart","cart",new{id=product.ProductDetail.Id,Soluong=1})"><button><i class="ti-shopping-cart"></i></button></a></li>
+                                                <li>
+                                                    <button class="buy-btn" data-product-id="@product.ProductDetail.Id">
+                                                        <i class="ti-shopping-cart"></i>
+                                                    </button>
+                                                </li>
 
                                             </ul>
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-product__title"><a href="#">@product.ProductDetail.Name</a></h4>
-                                            <p class="card-product__price">$@product.ProductDetail.Price</p>
+
+                                            <p class="card-product__price">@product.ProductDetail.Price.ToString("C0", new CultureInfo("vi-VN"))</p>
+
                                         </div>
                                     </div>
                                 </div>
@@ -234,5 +250,50 @@
             }).get();
         }
     });
+</script>
+<script>
+    $('body').on('click', '.buy-btn', function (e) {
+        e.preventDefault();
+        var id = $(this).data('product-id');
+        var quantity = 1;
+        var quantityText = $('.o').text();
+        if (quantityText != '') {
+            quantity = parseInt(quantityText);
+        }
+
+        $.ajax({
+            url: '/cart/AddToCart',
+            type: 'POST',
+            data: { id: id, Soluong: quantity },
+            success: function (rs) {
+                if (rs.success) {
+                    // Hiển thị thông báo thành công
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'Thêm vào giỏ hàng thành công!',
+                        showConfirmButton: false,
+                        position: 'bottom-right',
+                        timer: 2000,
+                        toast: true
+                    });
+
+                    // Cập nhật số lượng sản phẩm trong giỏ hàng
+                    $('.nav-shop__circle').html(rs.count);
+                } else {
+                    // Hiển thị thông báo lỗi nếu cần
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Lỗi',
+                        text: 'Có lỗi xảy ra khi thêm vào giỏ hàng.',
+                        showConfirmButton: false,
+                        position: 'bottom-right',
+                        timer: 2000,
+                        toast: true
+                    });
+                }
+            }
+        });
+    });
+
 </script>
 <script src="~/js/asc_desc.js"></script>
