--- a/APPVIEW/Views/Voucher/GetList.cshtml
+++ b/APPVIEW/Views/Voucher/GetList.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<APPDATA.Models.Voucher>
+﻿@using System.Globalization;
+@model IEnumerable<APPDATA.Models.Voucher>
 
 @{
     ViewData["Title"] = "Voucher-List";
@@ -8,7 +9,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h5 class="mb-0">Suppliers</h5>
+        <h5 class="mb-0">Voucher</h5>
     </div>
     <div class="card-body">
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
@@ -25,6 +26,8 @@
                         <th>STT</th>
                         <th>Name</th>
                         <th>Code</th>
+                        <th>Maximum DiscountAmount</th>
+                        <th>Quantity</th>
                         <th>Status</th>
                         <th>Value</th>
                         <th>Create date</th>
@@ -43,12 +46,14 @@
                                 <td>@(stt += 1)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Code)</td>
+                                <td>@item.DiscountAmount.ToString("C0", new CultureInfo("vi-VN"))</td>
+                                <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
                                 <td>
                                     <span class="badge @(item.Status == 1 ? "badge rounded-pill bg-label-success" : "badge rounded-pill bg-label-danger")">
                                         @(item.Status == 1 ? "Using" : "Not use")
                                     </span>
                                 </td>
-                                <td>@Html.DisplayFor(modelItem => item.Value)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Value)%</td>
                                 <td>
                                     @{
                                         DateTime createDate = item.Create_date;
@@ -86,14 +91,23 @@
                                     @formattedEndDate
                                 </td>
                                 <td>
-                                    <a href="@Url.Action("Edit", new { id = item.Id  })" class="btn btn-info waves-effect waves-light">
-                                        <span class="mdi mdi-pencil-box-outline"></span>Edit
-                                    </a>
-                                    <a href="@Url.Action("Delete", new { id = item.Id  })" class="btn btn-danger waves-effect waves-light">
-                                        <span class="mdi mdi-delete"></span>Delete
-                                    </a>
+                                                                     
+                                    <div class="d-inline-block text-nowrap">
+                                        <button class="btn btn-sm btn-icon btn-text-secondary rounded-pill btn-icon dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                            <i class="mdi mdi-dots-vertical mdi-20px"></i>
+                                        </button>
+                                        <div class="dropdown-menu dropdown-menu-end m-0">
+                                            <a href="@Url.Action("Edit", new { id = item.Id })" class="dropdown-item">
+                                                <i class="mdi mdi-pencil-outline me-2"></i>
+                                                <span>Edit</span>
+                                            </a>
+                                            <a href="@Url.Action("Delete", new { id = item.Id })" class="dropdown-item delete-record">
+                                                <i class="mdi mdi-delete-outline me-2"></i>
+                                                <span>Delete</span>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </td>
-
                             </tr>
                         }
                     }
