--- a/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container-xxl flex-grow-1 container-p-y">
     <div class="row gy-4">
         <!-- Transactions -->
-        <div class="col-lg-12">
+    @*    <div class="col-lg-12">
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center justify-content-between">
@@ -87,8 +87,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-12 col-md-12">
+        </div>*@
+      @*  <div class="col-xl-12 col-md-12">
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between">
@@ -96,13 +96,13 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div id="container">
+                    <div id="container">*@
                         @* <canvas id="trendingProductsChart"></canvas> *@
-                        <canvas id="weeklyChartview"></canvas>
+                      @*  <canvas id="weeklyChartview"></canvas>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <!--/ Transactions -->
         <!-- Weekly Overview Chart -->
         <div class="col-xl-6 col-md-6">
@@ -550,7 +550,7 @@
 
                     );
                     weeklyChart = new Chart(ctx, {
-                        type: 'line',
+                        type: 'bar',
                         data: {
                             labels: labels,
                             datasets: [{
